Login and registration using Mybatis

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,11 +33,13 @@
   </div>
 </div>
 
+
 <div id="conversationDiv">
 	<button id="compile" onclick="compile();">compile</button>
 	<button id="test" onclick="test();">test</button>
 	<button id="sendMessage" onclick="sendMessage();">Send</button>
 	<button id="getFiles" onclick="getAssignmentFiles();">getAssignmentFiles</button>
+	<a href="/logout">Logout</a>
 	<p id="response"></p>
 </div>
 
