CompletableFutures, TaskTimer, Competition control

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,7 +21,7 @@
 	
 	<link rel="stylesheet" href="/webjars/jquery-ui-themes/smoothness/jquery-ui.min.css"/>
 	
-	<title>Insert title here</title>
+	<title>Master of Java</title>
 </head>
 <body onload="connect();">
 <div id="tabs" >
@@ -45,7 +45,7 @@
 $( "#tabs" ).tabs();
 </script>
 <script type="text/javascript" src="index.js"></script>
-<script type="text/javascript"src="app.js"></script>
+<script type="text/javascript" src="app.js"></script>
 </body>
 
 
