added CONTROL role

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -41,6 +41,7 @@
 	<button id="getFiles" onclick="getAssignmentFiles();">getAssignmentFiles</button>
 	<a href="/logout">Logout</a>
 	<p id="response"></p>
+	<a href="/static/docs/api/index.html" target="_blank">javadoc</a>
 </div>
 
 <script type="text/javascript">
