--- a/src/main/resources/templates/control.html
+++ b/src/main/resources/templates/control.html
@@ -26,6 +26,7 @@
 <div id="conversationDiv">
 	<button id="start" onclick="startTask();">Start Task</button>
 	<button id="test" onclick="getSplit();">test</button>
+	<button id="clear" onclick="clearAssignment();">clear</button>
 	<p id="response"></p>
 </div>
 
