--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -51,8 +51,9 @@
 	<button id="sendMessage" onclick="sendMessage();">Send</button>
 	<button id="getFiles" onclick="getAssignmentFiles();">getAssignmentFiles</button>
 	<a href="/logout">Logout</a>
-	<p id="response"></p>
 	<a href="/static/docs/api/index.html" target="_blank">javadoc</a>
+	<button id="submit" onclick="submit();">SUBMIT</button>
+	<p id="response"></p>
 </div>
 
 <div>
