--- a/src/main/resources/templates/control.html
+++ b/src/main/resources/templates/control.html
@@ -6,7 +6,7 @@
 	<script src="/webjars/sockjs-client/sockjs.min.js"></script>
 	<script src="/webjars/stomp-websocket/stomp.min.js"></script>
 
-	<script src="coolclock.js" type="text/javascript"></script>
+	<script src="/js/coolclock.js" type="text/javascript"></script>
 <title>Control</title>
 </head>
 <body onload="connect();">
@@ -31,6 +31,6 @@
 </div>
 
 
-<script type="text/javascript" src="taskcontrol.js"></script>
+<script type="text/javascript" src="/js/taskcontrol.js"></script>
 </body>
 </html>
