using minified stuff

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
 <head>
     <title>Getting Started: Handling Form Submission</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<link rel="stylesheet" href="registration.css" />
+	<link rel="stylesheet" href="/css/registration.css" />
 </head>
 <body>
 	<div class="container">
