--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -3,7 +3,7 @@
 <title>Registration Masters of Java</title>
 <meta name="robots" content="noindex, nofollow">
 <!-- Include CSS File Here -->
-<link rel="stylesheet" href="registration.css" />
+<link rel="stylesheet" href="/css/registration.css" />
 </head>
 <body>
 	<div class="container">
