--- a/src/main/resources/templates/rankings.html
+++ b/src/main/resources/templates/rankings.html
@@ -4,8 +4,8 @@
 	<script src="/webjars/sockjs-client/sockjs.min.js"></script>
 	<script src="/webjars/stomp-websocket/stomp.min.js"></script>
 <script src="/webjars/jquery/jquery.min.js"></script>
-<script src="ranking.js"></script>
-<link href="ranking.css" rel="stylesheet" />
+<script src="/js/ranking.js"></script>
+<link href="/css/ranking.css" rel="stylesheet" />
 </head>
 
 <header>
@@ -25,10 +25,10 @@
 					<th th:each="assignment : ${assignments}" th:text="${assignment}"/>
 					<th>Total score</th>
 				</tr>
-				<tr th:each="team : ${teamMapper.allTeams}">
-					<td th:text="${team.name}" />
-					<td th:each="result : ${team.results}" th:text="${result.score}"/>
-					<td th:text="${team.totalScore}"/>
+				<tr th:each="ranking : ${rankings}">
+					<td th:text="${ranking.team}" />
+					<td th:each="result : ${ranking.results}" th:text="${result.score}"/>
+					<td th:text="${ranking.totalScore}"/>
 				</tr>
 			</table>
 		</div>
