--- a/src/main/resources/templates/control.html
+++ b/src/main/resources/templates/control.html
@@ -27,6 +27,7 @@
 	<button id="start" onclick="startTask();">Start Task</button>
 	<button id="test" onclick="getSplit();">test</button>
 	<button id="clear" onclick="clearAssignment();">clear</button>
+	<button id="clone" onclick="cloneAssignmentsRepo();">Clone assignments repo</button>
 	<p id="response"></p>
 </div>
 
