--- a/src/main/resources/templates/rankings.html
+++ b/src/main/resources/templates/rankings.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-	<script src="/webjars/sockjs-client/sockjs.min.js"></script>
-	<script src="/webjars/stomp-websocket/stomp.min.js"></script>
+<script src="/webjars/sockjs-client/sockjs.min.js"></script>
+<script src="/webjars/stomp-websocket/stomp.min.js"></script>
 <script src="/webjars/jquery/jquery.min.js"></script>
 <script src="/js/ranking.js"></script>
 <link href="/css/ranking.css" rel="stylesheet" />
@@ -11,24 +11,37 @@
 <header>
 	<h1>Rankings</h1>
 </header>
-<body onload = connect()>
+<body onload=connect()>
 	<div class="container">
 		<div id="main" class="main">
 			<table id="table">
 				<tr>
 					<th COLSPAN="10">
-						<h3><br>SCORE BOARD</h3>
+						<h3>
+							<br>SCORE BOARD
+						</h3>
 					</th>
 				</tr>
 				<tr>
-					<th>Team</th>
-					<th th:each="assignment : ${assignments}" th:text="${assignment}"/>
-					<th>Total score</th>
+					<th rowspan="2">Team</th>
+					<th colspan="3" th:each="assignment : ${assignments}" th:text="${assignment}" />
+					<th rowspan="2">Total score</th>
 				</tr>
+				<tr>
+					<th:block th:each="assignment : ${assignments}">
+						<th>score</th><th>penalty</th><th>credit</th>
+					</th:block>
+					</tr>
 				<tr th:each="ranking : ${rankings}">
-					<td th:text="${ranking.team}" />
-					<td th:each="result : ${ranking.results}" th:text="${result.score}"/>
-					<td th:text="${ranking.totalScore}"/>
+					<td th:text="${ranking.team}" >teamname</td>
+					
+					<th:block th:each="result : ${ranking.results}">
+						<td th:text="${result.score}">0</td>
+						<td th:text="${result.penalty}">1</td>
+						<td th:text="${result.credit}">2</td>
+					</th:block>
+
+					<td th:text="${ranking.totalScore}">3</td>
 				</tr>
 			</table>
 		</div>
