--- a/src/main/resources/templates/control.html
+++ b/src/main/resources/templates/control.html
@@ -25,7 +25,7 @@
 </div>
 <div id="conversationDiv">
 	<button id="start" onclick="startTask();">Start Task</button>
-	<button id="test" onclick="getSplit();">test</button>
+	<button id="stop" onclick="getSplit();">test</button>
 	<button id="clear" onclick="clearAssignment();">clear</button>
 	<button id="clone" onclick="cloneAssignmentsRepo();">Clone assignments repo</button>
 	<p id="response"></p>
