able to stop task and start new one

--- a/src/main/resources/templates/control.html
+++ b/src/main/resources/templates/control.html
@@ -25,8 +25,7 @@
 </div>
 <div id="conversationDiv">
 	<button id="start" onclick="startTask();">Start Task</button>
-	<button id="stop" onclick="getSplit();">test</button>
-	<button id="clear" onclick="clearAssignment();">clear</button>
+	<button id="stop" onclick="stopTask();">Stop Task</button>
 	<button id="clone" onclick="cloneAssignmentsRepo();">Clone assignments repo</button>
 	<p id="response"></p>
 	<form method="POST" action="/upload" enctype="multipart/form-data">
