--- a/src/main/resources/templates/testfeedback.html
+++ b/src/main/resources/templates/testfeedback.html
@@ -9,16 +9,15 @@
 </head>
 
 <header>
-	<h1>Test Feedback</h1>
+	<h1 id="tasktime">Test Feedback</h1>
 </header>
+
 <body onload=connect()>
 	<div class="container">
 		<div id="main" class="main">
            <div th:each="team : ${teams}" >
              <p th:text="${team.name}" />
-             <ol>
-               <li th:id="${team.name}+'-'+${test}" th:each="test : ${tests}" th:text="${test}"></li>
-             </ol>
+               <pre th:id="${team.name}+'-'+${test}" th:each="test : ${tests}" th:text="${test}"></pre>
            </div>
 		</div>
 	</div>
