--- a/src/main/resources/templates/rankings.html
+++ b/src/main/resources/templates/rankings.html
@@ -24,12 +24,12 @@
 				</tr>
 				<tr>
 					<th rowspan="2">Team</th>
-					<th colspan="3" th:each="assignment : ${assignments}" th:text="${assignment}" />
+					<th colspan="1" th:each="assignment : ${assignments}" th:text="${assignment}" />
 					<th rowspan="2">Total score</th>
 				</tr>
 				<tr>
 					<th:block th:each="assignment : ${assignments}">
-						<th>score</th><th>penalty</th><th>credit</th>
+ 						<th>score</th> <!-- <th>penalty</th><th>credit</th> -->
 					</th:block>
 					</tr>
 				<tr th:each="ranking : ${rankings}">
@@ -37,8 +37,8 @@
 					
 					<th:block th:each="result : ${ranking.results}">
 						<td th:text="${result.score}">0</td>
-						<td th:text="${result.penalty}">1</td>
-						<td th:text="${result.credit}">2</td>
+<!-- 						<td th:text="${result.penalty}">1</td> -->
+<!-- 						<td th:text="${result.credit}">2</td> -->
 					</th:block>
 
 					<td th:text="${ranking.totalScore}">3</td>
