test exit value fix

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,7 +33,7 @@
    <div th:attr="id=|${file.name}|"></div>
   </div>
   <div id="output-tab">
-     <div id="outputarea"></div>
+     <div id="outputarea"><pre></pre></div>
   </div>
  </div>
 
