- Fixed a few spelling errors - Increased message buffer size

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -41,7 +41,7 @@
   <p>No assignment active right now;</p>
  </div>
  <div th:if="${finished}">
-  <p>You have allready submitted your assignment;</p>
+  <p>You have already submitted your assignment;</p>
  </div>
 
  <div>
