--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,77 +1,144 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
 
-<script src="/webjars/jquery/jquery.min.js"></script>
-<script src="/webjars/jquery-ui/jquery-ui.min.js"></script>
+    <title>Master of Java 2017</title>
 
-<script src="/webjars/sockjs-client/sockjs.min.js"></script>
-<script src="/webjars/stomp-websocket/stomp.min.js"></script>
+    <link rel="stylesheet" th:href="@{/webjars/codemirror-minified/addon/hint/show-hint.css}"/>
+    <link rel="stylesheet" th:href="@{/webjars/codemirror-minified/lib/codemirror.css}"/>
+    <link rel="stylesheet" th:href="@{/webjars/jquery-ui-themes/smoothness/jquery-ui.min.css}"/>
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"
+          href="/webjars/bootstrap/4.0.0-beta-1/css/bootstrap.min.css"/>
+    <link rel="stylesheet" th:href="@{/css/index.css}"/>
 
-<script src="/webjars/codemirror-minified/lib/codemirror.js"></script>
-
-<script src="/webjars/codemirror-minified/addon/edit/matchbrackets.js"></script>
-<script src="/webjars/codemirror-minified/addon/selection/active-line.js"></script>
-<script src="/webjars/codemirror-minified/addon/hint/show-hint.js"></script>
-<script src="/webjars/codemirror-minified/mode/clike/clike.js"></script>
-
-<link rel="stylesheet" href="/webjars/codemirror-minified/addon/hint/show-hint.css">
-<link rel="stylesheet" href="/webjars/codemirror-minified/lib/codemirror.css">
-<link rel="stylesheet" href="/webjars/jquery-ui-themes/smoothness/jquery-ui.min.css" />
-<link rel="stylesheet" href="/css/index.css">
-<title>Master of Java</title>
 </head>
+
 <body onload="init();">
+<div class="container-fluid p-5">
+    <!-- header -->
+    <div class="row">
+        <div class="col d-flex">
+            <div class="p-2">
+                <img th:src="@{/images/moj_logo_128x97_2017.png}" class="img-fluid"
+                     src="/static/images/moj_logo_128x97_2017.png"/>
+            </div>
+            <div class="p-2 align-self-center">
+                <h2>Team: ${team}</h2>
+            </div>
+        </div>
+    </div>
+    <!-- content -->
+    <div class="row">
+        <div class="col-10">
+            <!--/*@thymesVar id="running" type="java.lang.Boolean"*/-->
+            <div class="text-center" th:unless="${running}">
+                <h1>No active assignment</h1>
+                <p>At the moment there is no assignment active. Once an assignment is started you will automatically be
+                    shown he assignment.</p>
+            </div>
+        </div>
 
- <div id="tabs" th:if="${running} and not ${finished}">
-  <ul>
-   <li th:attr="id=|${file.name}-li|" th:each="file : ${files}"><a href="#" th:attrappend="href=|${file.name}-tab|" th:text="|${file.filename}|"></a></li>
-   <li id="output" ><a href="#output-tab">output</a></li>
-  </ul>
-  <div th:each="file : ${files}" th:attr="id=|${file.name}-tab|">
-   <div th:attr="id=|${file.name}|"></div>
-  </div>
-  <div id="output-tab">
-     <div id="outputarea"></div>
-  </div>
- </div>
+        <div class="col-10">
+            <!--/*@thymesVar id="finished" type="java.lang.Boolean"*/-->
+            <div class="text-center" th:if="${finished}">
+                <h1>Assignment Submitted</h1>
+                <p>You submitted the assignment for final review and therefore can no longer change the assignment any
+                    more.</p>
+            </div>
+        </div>
+        <div class="col-10" th:if="${running} and not ${finished}">
+            <div class="p-2">
+                <h3>Assignment: NAME</h3>
+            </div>
+            <div id="tabs2">
+                <ul class="nav nav-tabs" role="tablist">
+                    <!--/*@thymesVar id="files" type="java.util.List<nl.moj.server.files.AssignmentFile>"*/-->
+                    <li class="nav-item" th:each="file,status : ${files}">
+                        <a class="nav-link" th:classappend="${status.index==0?'active':''}" th:id="${file.name}"
+                           th:href="${'#'+file.name + '-tab'}" data-toggle="tab"
+                           th:text="${file.filename}"></a>
+                    </li>
+                </ul>
+                <div class="tab-content">
+                    <div class="tab-pane fade" th:classappend="${status.index==0?'show active':''}" role="tabpanel"
+                         th:each="file,status : ${files}" th:id="${file.name + '-tab'}">
+                        <div>
+                            <pre th:if="${file.fileType.name()=='TASK'}" th:utext="${file.content}"></pre>
+                            <textarea th:if="${file.fileType.name()!='TASK'}"
+                                      th:attr="data-cm=${file.name},data-cm-file-type=${file.fileType},data-cm-readonly=${file.readOnly}"
+                                      th:utext="${file.content}"></textarea>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
- <div th:unless="${running}">
-  <p>No assignment active right now;</p>
- </div>
- <div th:if="${finished}">
-  <p>You have allready submitted your assignment;</p>
- </div>
+            <div>
+                <ul>
+                    <li th:each="testname : ${testnames}"><input name="test" type="checkbox" th:value="${testname}"/>
+                        <label th:text="${testname}">Wireframe</label>
+                    </li>
+                </ul>
+            </div>
 
- <div>
-  <ul>
-   <li th:each="testname : ${testnames}"><input name="test" type="checkbox" th:value="${testname}" /> <label th:text="${testname}">Wireframe</label>
-   </li>
-  </ul>
- </div>
- 
- <div id="conversationDiv" th:if="${running} and not ${finished}">
-  <button id="compile" onclick="compile();">compile</button>
-  <button id="test" onclick="test();">test</button>
-  <button id="submit" onclick="submit();">final SUBMIT</button>
-  <a href="http://download.java.net/java/jdk9/docs/api/overview-summary.html" target="_blank">javadoc</a>
- </div>
- <div>
-  <p id="response"></p>
- </div>
+            <div id="conversationDiv" th:if="${running} and not ${finished}">
+                <button id="compile" onclick="compile();">compile</button>
+                <button id="test" onclick="test();">test</button>
+                <button id="submit" onclick="submit();">final SUBMIT</button>
+                <a href="http://download.java.net/java/jdk9/docs/api/overview-summary.html"
+                   target="_blank">javadoc</a>
+            </div>
+            <div>
+                <p id="response"></p>
+            </div>
+        </div>
 
- <div>
-  <p id="status" />
- </div>
+        <div class="col-2">
+            <div class="d-flex flex-column">
+                <div class="align-self-center">
+                    <h3>Time Left</h3>
+                </div>
+                <div id="assignment-clock" class="align-self-center">
+                    <div class="time d-flex justify-content-center" style="height: 160px; width: 160px;">
+                        <h2 class="align-self-center">--:--</h2>
+                    </div>
+                    <svg width="160" height="160" xmlns="http://www.w3.org/2000/svg">
+                        <g>
+                            <circle class="clock" r="69.85699" cy="81" cx="81"
+                                    stroke-width="8"
+                                    stroke="#6fdb6f" fill="none"></circle>
+                        </g>
+                    </svg>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- footer -->
+    <div class="fixed-bottom footer d-flex">
+        <div class="mr-auto p-2">
+            <img th:src="@{/images/logo_first8_150x39.png}" class="img-fluid"
+                 src="/static/images/logo_first8_150x39.png"/>
+        </div>
+        <div class="ml-auto p-2 align-self-center" id="status"></div>
+    </div>
+</div>
 
+<script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
+<script type="text/javascript" th:src="@{/webjars/popper.js/dist/umd/popper.min.js}"></script>
+<script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+<script type="text/javascript" th:src="@{/webjars/jquery-ui/jquery-ui.min.js}"></script>
 
- <script type="text/javascript" th:unless="${#lists.isEmpty(files)}">
-		$("#tabs").tabs();
-	</script>
- <script type="text/javascript" src="index.js" th:unless="${#lists.isEmpty(files)}"></script>
- <script type="text/javascript" src="/js/app.js"></script>
+<script type="text/javascript" th:src="@{/webjars/codemirror-minified/lib/codemirror.js}"></script>
+<script type="text/javascript" th:src="@{/webjars/codemirror-minified/addon/edit/matchbrackets.js}"></script>
+<script type="text/javascript" th:src="@{/webjars/codemirror-minified/addon/selection/active-line.js}"></script>
+<script type="text/javascript" th:src="@{/webjars/codemirror-minified/addon/hint/show-hint.js}"></script>
+<script type="text/javascript" th:src="@{/webjars/codemirror-minified/mode/clike/clike.js}"></script>
+
+<script type="text/javascript" th:src="@{/webjars/sockjs-client/sockjs.min.js}"></script>
+<script type="text/javascript" th:src="@{/webjars/stomp-websocket/stomp.min.js}"></script>
+
+<script type="text/javascript" th:src="@{/js/app.js}"></script>
+<script type="text/javascript" th:src="@{/js/index.js}"></script>
+
 </body>
-
-
 </html>
