fixed green/red on compile success

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,12 +27,12 @@
  <div id="tabs" th:if="${running} and not ${finished}">
   <ul>
    <li th:attr="id=|${file.name}-li|" th:each="file : ${files}"><a href="#" th:attrappend="href=|${file.name}-tab|" th:text="|${file.filename}|"></a></li>
-   <li id="output" ><a href="#output-tab">output</a></li>
+   <li id="outputarea-li"><a href="#outputarea-tab">Compile output</a></li>
   </ul>
   <div th:each="file : ${files}" th:attr="id=|${file.name}-tab|">
    <div th:attr="id=|${file.name}|"></div>
   </div>
-  <div id="output-tab">
+  <div id="outputarea-tab">
      <div id="outputarea"><pre></pre></div>
   </div>
  </div>
