update JavaDoc URL to working URL

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -55,7 +55,7 @@
   <button id="compile" onclick="compile();">compile</button>
   <button id="test" onclick="test();">test</button>
   <button id="submit" onclick="submit();">final SUBMIT</button>
-  <a href="http://download.java.net/java/jdk9/docs/api/overview-summary.html" target="_blank">javadoc</a>
+  <a href=" https://docs.oracle.com/javase/9/docs/api/overview-summary.html" target="_blank">javadoc</a>
  </div>
  <div>
   <p id="response"></p>
