use thymeleaf attribute

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -78,7 +78,7 @@
                      src="/static/images/moj_logo_128x97_2017.png"/>
             </div>
             <div class="p-2 align-self-center">
-                <h2>Team: ${team}</h2>
+                <h2>Team: <span th:text="${team}"></span></h2>
             </div>
             <div th:if="${running}" class="p-2 align-self-center">
                 <div class="text-center">
