--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,15 +29,17 @@
             </div>
 
             <!--/*@thymesVar id="finished" type="java.lang.Boolean"*/-->
-            <div class="text-center" th:if="${finished}">
-                <h1>Assignment Submitted</h1>
-                <p>You submitted the assignment for final review and therefore can no longer change the assignment any
-                    more.</p>
-            </div>
 
-            <div th:if="${running} and not ${finished}">
+
+            <div th:if="${running}">
                 <div class="p-2">
-                    <h3>Assignment: NAME</h3>
+                    <h3>Assignment: [[${assignment}]]</h3>
+                </div>
+                <div id="alert-container">
+                    <div th:if="${finished}" class="alert alert-success p-4" role="alert">
+                        <h4 class="alert-heading">Assignment Submitted</h4>
+                        <p>Well done!. You have submitted the assignment for final review. Chill out and wait until the next assignment starts.</p>
+                    </div>
                 </div>
                 <div id="tabs">
                     <ul class="nav nav-tabs" role="tablist">
@@ -78,39 +80,40 @@
                      src="/static/images/moj_logo_128x97_2017.png"/>
             </div>
             <div class="p-2 align-self-center">
-                <h2 th:text="'Team: ' + ${team}"></h2>
+                <h2>Team: [[${team}]]</h2>
             </div>
             <div th:if="${running}" class="p-2 align-self-center">
                 <div class="text-center">
                     <h3>Time Left</h3>
                 </div>
-                <div id="assignment-clock" class="align-self-center">
+                <div id="assignment-clock" th:attrappend="data-time-left=${timeLeft},data-time=${time}"
+                     class="align-self-center">
                     <div class="time d-flex justify-content-center" style="height: 160px; width: 160px;">
                         <h2 class="align-self-center">--:--</h2>
                     </div>
                     <svg width="160" height="160" xmlns="http://www.w3.org/2000/svg">
                         <g>
-                            <circle class="clock" r="69.85699" cy="81" cx="81"
+                            <circle class="clock circle_animation" r="69.85699" cy="81" cx="81"
                                     stroke-width="8"
                                     stroke="#6fdb6f" fill="none"></circle>
                         </g>
                     </svg>
                 </div>
             </div>
-            <div th:if="${running} and not ${finished}" class="mt-5 p-2 text-center">
+            <div th:if="${running}" class="mt-5 p-2 text-center">
                 <a class="btn w-50 btn-warning text-white"
                    href="https://docs.oracle.com/javase/9/docs/api/overview-summary.html"
                    target="_blank">Javadoc</a>
             </div>
-            <div th:if="${running} and not ${finished}" class="p-2 text-center">
-                <button id="compile" class="btn w-50 btn-success">Compile</button>
+            <div th:if="${running}" class="p-2 text-center">
+                <button id="compile" class="btn w-50 btn-success" th:disabled="${finished}">Compile</button>
             </div>
-            <div th:if="${running} and not ${finished}" class="p-2  text-center">
-                <button id="show-tests" class="btn w-50 btn-success" data-toggle="modal" data-target="#test-modal">Test
+            <div th:if="${running}" class="p-2  text-center">
+                <button id="show-tests" class="btn w-50 btn-success" data-toggle="modal" data-target="#test-modal" th:disabled="${finished}">Test
                 </button>
             </div>
-            <div th:if="${running} and not ${finished}" class="mt-5 p-2  text-center">
-                <button id="submit" class="btn w-50 btn-danger">SUBMIT</button>
+            <div th:if="${running}" class="mt-5 p-2  text-center">
+                <button id="submit" class="btn w-50 btn-danger" th:disabled="${finished}">SUBMIT</button>
             </div>
 
         </div>
@@ -148,7 +151,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <button type="button" id="test" class="btn btn-primary">Run Tests</button>
+                <button type="button" id="test" class="btn btn-primary" th:disabled="${finished}">Run Tests</button>
             </div>
         </div>
     </div>
