removed lombok, not compatible with java 9 at the moment

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,27 +1,36 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Masters of Java</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<link rel="stylesheet" href="/css/registration.css" />
+    <meta charset="UTF-8"/>
+    <title>Master of Java 2017</title>
+
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"
+          href="/webjars/bootstrap/4.0.0-beta-1/css/bootstrap.min.css"/>
+    <link rel="stylesheet" th:href="@{/css/registration.css}" href="/static/css/registration.css"/>
 </head>
+
 <body>
-	<div class="container">
-		<div class="main">
-			<h1>Welcome!</h1>
-			<p th:if="${param.logout}" class="alert">You have been logged out</p>
-			<p th:if="${param.error}" class="alert alert-error">There was an
-				error, please try again</p>
-			<h2>Login to Masters of Java</h2>
-				
-			<form name="form" class="form" th:action="@{/login}" action="/login" method="POST">
-				<input type="text" name="username" value="" placeholder="Username" />
-				<input type="password" name="password" placeholder="Password" /> 
-				<input type="submit" id="login" value="Login" class="btn btn-primary" />
-				<a href="/register">Register</a>
-			</form>
-		</div>
-	</div>
+
+<div class="container">
+    <div class="main">
+        <h1>Welcome!</h1>
+        <p th:if="${param.logout}" class="alert">You have been logged out</p>
+        <p th:if="${param.error}" class="alert alert-error">There was an
+            error, please try again</p>
+        <h2>Login</h2>
+
+        <form name="form" class="form" th:action="@{/login}" action="/login" method="POST">
+            <input type="text" name="username" value="" placeholder="Username"/>
+            <input type="password" name="password" placeholder="Password"/>
+            <input type="submit" id="login" value="Login" class="btn btn-primary"/>
+            <a th:href="@{/register}">Register</a>
+        </form>
+    </div>
+</div>
+
+<script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
+<script type="text/javascript" th:src="@{/webjars/popper.js/dist/umd/popper.min.js}"></script>
+<script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+
 </body>
 </html>
-
