--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -146,7 +146,7 @@
                 <form>
                     <div class="form-check" th:each="testname : ${testnames}">
                         <label class="form-check-label">
-                            <input name="test" class="form-check-input" type="checkbox" th:value="${testname}">
+                            <input name="test" class="form-check-input" type="checkbox" th:value="${testname}" checked="true">
                             [[${testname}]]
                         </label>
                     </div>
