- Timer now stays visible and stops after submitting an assignment

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -82,7 +82,7 @@
             <div class="p-2 align-self-center">
                 <h2>Team: [[${team}]]</h2>
             </div>
-            <div th:if="${running}" class="p-2 align-self-center" id="timer">
+            <div th:if="${running}" class="p-2 align-self-center">
                 <div class="text-center">
                     <h3>Time Left</h3>
                 </div>
